--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@ plugins {
 
 android {
     namespace 'twin.developers.projectmqtt'
-    compileSdk 33
+    compileSdk 30
 
     defaultConfig {
         applicationId "twin.developers.projectmqtt"
-        minSdk 27
+        minSdk 26
         //noinspection ExpiredTargetSdkVersion
-        targetSdk 33
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
@@ -36,17 +36,18 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    /*implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'*/
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database:20.3.0'
+    //implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //implementation 'com.google.firebase:firebase-database:20.3.0'
 }
