--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ dependencies {
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     implementation 'com.google.firebase:firebase-database:20.3.0'
+    implementation 'androidx.test:monitor:1.6.1'
+    implementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
     //implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     //implementation 'com.google.firebase:firebase-database:20.3.0'
 }
